
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4 (development, see CVS) ----

2003-04-18, MLively
  Added new diff utility for translations
    - devtools/transdiff.php 1.1
  Update the tr-parser to be a bit more inclusive
    - devtools/tr-parser.php 1.2
  Added new entries to the current translation files
    - zentrack/includes/translations/french.trans 1.2
    - zentrack/includes/translations/german.trans 1.2
    - zentrack/includes/translations/spanish.trans 1.2


2003-04-18, Rob Hillis
  Fix un-ordered display of bins when creating new ticket or project and when searching.
    - zentrack/includes/templates/newTicketForm.php 1.23
    - zentrack/includes/templates/newProjectForm.php 1.19
    - zentrack/includes/templates/searchForm.php 1.5

2003-04-17, Rob Hillis
  Tweak fix for UNC path display
    - zentrack/includes/templates/ticket_logBox.php 1.14
  Fix display of UNC paths in printed tickets and ticket descriptions
    - zentrack/www/actions/print.php 1.9
    - zentrack/includes/templates/ticket_detailsBox.php 1.7

2003-04-16, Rob Hillis
  Modified regexp when displaying logs to properly link entire URL, including punctuation
    - zentrack/includes/templates/ticket_logBox.php 1.11/1.12
  Fix bug where UNC paths are not displayed properly in logs
    - zentrack/includes/templates/ticket_logBox.php 1.13
  Footer not included on Support page
    - zentrack/zentrack/www/help/support.php 1.4
	
2003-04-15, Kato
  Added two new egate utilities to allow for simpler email ingestion
    - zentrack/includes/egate_check_create.php 1.1
    - zentrack/includes/egate_create.php 1.1
  Enhanced some egate features, corrected some inconsistencies
    - zentrack/includes/egate_utils.php 1.23
    - zentrack/includes/zenTrack.class 1.89