@@ -139,12 +139,12 @@ value="<?=strip_tags($title)?>">
     <select name="bin_id">
 <?
    if( is_array($userBins) ) {
-      $allbins = $zen->getBins();
-      
-      foreach($allbins as $k=>$v) {
+      foreach($zen->getBins(1) as $v) {
+         $k = $v["bid"];
+         
          if(in_array($k, $userBins)) {
       	   $check = ( $k == $bin_id || (!$bin_id && !$td && $k == $login_bin) )? "selected" : "";
-            print "<option $check value='$k'>$v</option>";
+            print "<option $check value='$k'>$v[name]</option>";
          }
       }
    } else {
